--- a/bayi/src/assets/scss/_variables.scss
+++ b/bayi/src/assets/scss/_variables.scss
@@ -111,7 +111,7 @@ $grays: map-merge(
 );
 
 $blue:    #609BA6;
-$indigo:  #E20D71;
+$indigo:  #C49C5C;
 $purple:  #373189;
 $pink:    #0a0507;
 $red:     #C60000;
