--- a/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
+++ b/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
@@ -1,17 +1,17 @@
-<ng-template #modalSiparis let-modal>
+<ng-template #modalSatis let-modal>
     <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Sipariş {{modalHeader.title}} Formu</h4>
+      <h4 class="modal-title" id="modal-basic-title">Satış {{modalHeader.title}} Formu</h4>
       <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('');">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <div class="modal-body">
       <div class="container">
-        <form validControl [formGroup]="siparisEklemeFormu" (submit)="islemiKaydet()">
+        <form validControl [formGroup]="satisEklemeFormu" (submit)="islemiKaydet()">
           <div class="row m-0">
             <div class="col-md-12 form-group">
-              <label>Açıklama *</label>
-              <input type="text" class="form-control" formControlName="e_aciklama" title="Açıklama" required>
+              <label>Ödeme Tipi *</label>
+              <input type="text" class="form-control" formControlName="e_odeme_tipi" title="Ödeme Tipi" required>
             </div>
             <div class="col-md-12 form-group">
               <label>Durum *</label>
@@ -29,11 +29,11 @@
     <div class="modal-footer">
         <button class="btn btn-primary mr-1 w-lg" *ngIf="!islemiKaydetBtn" onclick="document.getElementById('submitButton').click()">
             <i class="fas fa-check mr-2"></i> Kaydet
-          </button>
-          <button class="btn btn-primary mr-1 w-lg" *ngIf="islemiKaydetBtn">
-            <div class="spinner-glow spinner-glow-light mt-0 mr-2"></div> Kaydeliyor
-          </button>
-          <button class="btn btn-outline-dark w-lg" (click)="modal.dismiss('')"><span class="fas fa-times mr-2"></span> İptal</button>
+        </button>
+        <button class="btn btn-primary mr-1 w-lg" *ngIf="islemiKaydetBtn">
+        <div class="spinner-glow spinner-glow-light mt-0 mr-2"></div> Kaydeliyor
+        </button>
+        <button class="btn btn-outline-dark w-lg" (click)="modal.dismiss('')"><span class="fas fa-times mr-2"></span> İptal</button>
     </div>
     <div class="container mt-1">
       <div class="table-responsive">
@@ -42,16 +42,18 @@
             <tr class="alert-primary">
               <th class="text-center">Ürün</th>
               <th class="text-center">Miktar</th>
-              <th class="text-center"><button type="button" class="btn btn-sm btn-primary w-100" (click)="siparisDetayEkleButton()"><i class="fas fa-plus mr-1"></i>Detay Ekle</button></th>
+              <th class="text-center">Satır Toplamı</th>
+              <th class="text-center"><button type="button" class="btn btn-sm btn-primary w-100" (click)="satisDetayEkleButton()"><i class="fas fa-plus mr-1"></i>Detay Ekle</button></th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let detay of siparisDetayListesi">
+            <tr *ngFor="let detay of satisDetayListesi">
               <td class="text-center">{{detay.e_stok_kart_kodu}} - {{detay.e_stok_kart_adi}}</td>
               <td class="text-center">{{detay.e_miktar}}</td>
+              <td class="text-center">{{detay.e_satir_toplami}}</td>
               <td class="text-center">
-                <button class="btn btn-sm btn-outline-primary w-48" style="margin-right: 3%;" (click)="siparisDetayDuzenleButton(detay)"><i class="fas fa-edit"></i></button>
-                <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[detay.e_id]" (click)="detaySilButton(detay, 'siparisIslemleri/siparisDetaySil');"><i class="fas fa-times"></i></button>
+                <button class="btn btn-sm btn-outline-primary w-48" style="margin-right: 3%;" (click)="satisDetayDuzenleButton(detay)"><i class="fas fa-edit"></i></button>
+                <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[detay.e_id]" (click)="detaySilButton(detay, 'satisIslemleri/satisDetaySil');"><i class="fas fa-times"></i></button>
                 <button class="btn btn-sm btn-dark w-48" *ngIf="silinenKayitBtn[detay.e_id]"><div class="spinner-glow spinner-glow-light mt-0"></div></button>
               </td>
             </tr>
@@ -61,16 +63,16 @@
     </div>
 </ng-template>
 
-<ng-template #modalSiparisDetay let-modal>
+<ng-template #modalSatisDetay let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Sipariş Detay {{modalHeader.title}} Formu</h4>
+    <h4 class="modal-title" id="modal-basic-title">Satış Detay {{modalHeader.title}} Formu</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('');">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
     <div class="container">
-      <form validControl [formGroup]="siparisDetayEklemeFormu" (submit)="islemiKaydetDetayEkle()">
+      <form validControl [formGroup]="satisDetayEklemeFormu" (submit)="islemiKaydetDetayEkle()">
         <div class="row m-0">
           <div class="col-md-12 form-group">
             <label>Ürün *</label>
@@ -103,14 +105,14 @@
   
 <div class="card shadow-primary mb-3">
   <div class="card-body">
-    <form class="row m-0" (submit)="siparisListele()">
+    <form class="row m-0" (submit)="satisListele()">
       <div class="form-group col-md-8">
         <label>Arama:</label>
         <input type="text" class="form-control" [(ngModel)]="filterData.ARAMA" [ngModelOptions]="{standalone: true}">
       </div>
       <div class="form-group col-md-2">
         <label>Durum:</label>
-        <select class="form-control" [(ngModel)]="filterData.e_durum" [ngModelOptions]="{standalone: true}" (change)="siparisListele()">
+        <select class="form-control" [(ngModel)]="filterData.e_durum" [ngModelOptions]="{standalone: true}" (change)="satisListele()">
           <option value="">-- Tümü --</option>
           <option value="Aktif">Aktif</option>
           <option value="Pasif">Pasif</option>
@@ -124,49 +126,44 @@
   </div>
 </div>
   
-<div class="alert alert-primary p-4" *ngIf="!siparisListesi && !mainLoader">
+<div class="alert alert-primary p-4" *ngIf="!satisListesi && !mainLoader">
   <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
   <span class=" valign-middle">Listelemek istediğiniz kayıt bulunamadı.</span>
-  <button class="btn btn-primary fa-pull-right w-25" (click)="siparisEkleButton()"><span class="fas fa-plus mr-2"></span> Yeni Sipariş Ekle</button>
+  <button class="btn btn-primary fa-pull-right w-25" (click)="satisEkleButton()"><span class="fas fa-plus mr-2"></span> Yeni Satış Ekle</button>
 </div> 
   
 <div class="alert alert-primary p-4" *ngIf="mainLoader">
     <div class="spinner-glow spinner-glow-primary m-0 mr-4 valign-middle"></div>
-    <span class=" valign-middle">Sipariş kayıtları listeleniyor, lütfen bekleyiniz.</span>
+    <span class=" valign-middle">Satış kayıtları listeleniyor, lütfen bekleyiniz.</span>
 </div>
   
-<div class="card full-list-1" [hidden]="!siparisListesi || mainLoader">
-    <div class="card-body" *ngIf="siparisListesi && !mainLoader">
+<div class="card full-list-1" [hidden]="!satisListesi || mainLoader">
+    <div class="card-body" *ngIf="satisListesi && !mainLoader">
       <div class="table-responsive">
         <table class="table table-bordered table-hover">
           <thead>
             <tr class="alert-primary">
               <th class="text-center w-15">Tarih</th>
-              <th class="text-center w-15">Açıklama</th>
-              <th class="text-center w-10">Ürün Kalem Adedi</th>
-              <th class="text-center w-5">Siparişi Veren</th>
+              <th class="text-center w-15">Ödeme Tipi</th>
               <th class="text-center w-10">Toplam</th>
               <th class="text-center w-10">Durum</th>
               <th class="text-center w-20">
-                <button class="btn btn-primary btn-sm btn-block" (click)="siparisEkleButton()"><i class="fas fa-plus mr-1"></i> Yeni Sipariş Ekle</button>
+                <button class="btn btn-primary btn-sm btn-block" (click)="satisEkleButton()"><i class="fas fa-plus mr-1"></i> Yeni Satış Ekle</button>
               </th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let siparis of siparisListesi">
-              <td class="text-center">{{siparis.e_tarih | date: 'dd.MM.yyyy - HH:mm'}}</td>
-              <td class="text-left">{{siparis.e_aciklama}}</td>
-              <td class="text-left" *ngIf="siparis.e_farkli_kalem_sayisi != 0">{{siparis.e_farkli_kalem_sayisi}} adet</td>
-              <td class="text-left" *ngIf="siparis.e_farkli_kalem_sayisi == 0">Ürün Yok</td>
-              <td class="text-left">{{siparis.e_siparisi_acan_kullanici_adi}}</td>
-              <td class="text-left" *ngIf="siparis.e_toplam_miktar">{{siparis.e_toplam_miktar}} adet</td>
-              <td class="text-left" *ngIf="!siparis.e_toplam_miktar">Ürün Yok</td>
-              <td class="text-center"><span class="badge badge-success p-1 w-100 " *ngIf="siparis.e_durum == 'Aktif'">Aktif</span>
-                <span class="badge badge-secondary p-1 w-100 " *ngIf="siparis.e_durum != 'Aktif'">Pasif</span></td>
+            <tr *ngFor="let satis of satisListesi">
+              <td class="text-center">{{satis.e_tarih | date: 'dd.MM.yyyy - HH:mm'}}</td>
+              <td class="text-left">{{satis.e_odeme_tipi}}</td>
+              <td class="text-right" *ngIf="satis.e_sepet_toplami != null">{{satis.e_sepet_toplami | currency : ' '}} ₺</td>
+              <td class="text-right" *ngIf="satis.e_sepet_toplami == null">Tutar Yok</td>
+              <td class="text-center"><span class="badge badge-success p-1 w-100 " *ngIf="satis.e_durum == 'Aktif'">Aktif</span>
+                <span class="badge badge-secondary p-1 w-100 " *ngIf="satis.e_durum != 'Aktif'">Pasif</span></td>
               <td class="text-center">
-                <button class="btn btn-sm btn-outline-primary w-48" style="margin-right: 3%;" (click)="siparisDuzenleButton(siparis)"><i class="fas fa-edit"></i></button>
-                <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[siparis.e_id]" (click)="silButton(siparis, 'siparisIslemleri/siparisSil');"><i class="fas fa-times"></i></button>
-                <button class="btn btn-sm btn-dark w-48" *ngIf="silinenKayitBtn[siparis.e_id]"><div class="spinner-glow spinner-glow-light mt-0"></div></button>
+                <button class="btn btn-sm btn-outline-primary w-48" style="margin-right: 3%;" (click)="satisDuzenleButton(satis)"><i class="fas fa-edit"></i></button>
+                <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[satis.e_id]" (click)="silButton(satis, 'satisIslemleri/satisSil');"><i class="fas fa-times"></i></button>
+                <button class="btn btn-sm btn-dark w-48" *ngIf="silinenKayitBtn[satis.e_id]"><div class="spinner-glow spinner-glow-light mt-0"></div></button>
               </td>
             </tr>
           </tbody>
@@ -177,7 +174,7 @@
       <div class="card-footer-pagination">
         <pagination
           [boundaryLinks]="true"
-          [totalItems]="siparisListesi ? siparisListesi[0].TKS : 0"
+          [totalItems]="satisListesi ? satisListesi[0].TKS : 0"
           [itemsPerPage]="filterData.KS"
           [(ngModel)]="filterData.SS"
           previousText="&lsaquo;"
@@ -186,10 +183,10 @@
           lastText="Son Sayfa"
           [maxSize]="5"
           [rotate]="false"
-          (pageChanged)="filterData.SS = $event.page; siparisListele()"
+          (pageChanged)="filterData.SS = $event.page; satisListele()"
         ></pagination>
-        <div class="text-center" *ngIf="siparisListesi && !mainLoader">
-          <small>Toplam <strong>{{siparisListesi[0].TKS}}</strong> kayıt içinden <strong>{{siparisListesi.length}}</strong> tanesi listelendi.</small>
+        <div class="text-center" *ngIf="satisListesi && !mainLoader">
+          <small>Toplam <strong>{{satisListesi[0].TKS}}</strong> kayıt içinden <strong>{{satisListesi.length}}</strong> tanesi listelendi.</small>
         </div>
       </div>
     </div>
