--- a/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
+++ b/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
@@ -9,14 +9,17 @@
       <div class="container">
         <form validControl [formGroup]="satisEklemeFormu" (submit)="islemiKaydet()">
           <div class="row m-0">
-            <div class="col-md-12 form-group">
+            <div class="col-md-6 form-group">
               <label>Ödeme Tipi *</label>
-              <input type="text" class="form-control" formControlName="e_odeme_tipi" title="Ödeme Tipi" required>
-            </div>
-            <div class="col-md-12 form-group">
-              <label>Durum *</label>
-              <select class="form-control" formControlName="e_durum" title="Durum">
+              <select class="form-control" formControlName="e_odeme_tipi" title="Ödeme Tipi" required>
                 <option value="">-- Seçiniz --</option>
+                <option value="Nakit">Nakit</option>
+                <option value="Kredi Kartı">Kredi Kartı</option>
+              </select>
+            </div>
+            <div class="col-md-6 form-group">
+              <label>Durum *</label>
+              <select class="form-control" formControlName="e_durum" title="Durum" required>
                 <option value="Aktif">Aktif</option>
                 <option value="Pasif">Pasif</option>
               </select>
@@ -26,6 +29,51 @@
         </form>
       </div>
     </div>
+    <div class="container mt-1">
+        <div class="card-header bg-transparent d-flex jc-space-between border-1-bottom mx-3" style="border-radius: 10px;">
+            <h5 class="m-0 mt-2 ng-tns-c77-6">Satış Detayları</h5><button class="btn btn-block btn-primary w-20 ng-tns-c77-6" (click)="satisDetayEkleButton()"><i class="fas fa-plus mr-2 ng-tns-c77-6"></i> Satış Detayı Ekle</button>
+        </div>
+        <div class="alert alert-primary p-4 m-3" *ngIf="!satisDetayListesi && !detayLoader">
+            <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
+            <span class=" valign-middle">Listelemek istediğiniz detay kaydı bulunamadı.</span>
+            <!-- <button class="btn btn-primary fa-pull-right w-25" (click)="satisDetayEkleButton()"><span class="fas fa-plus mr-2"></span> Detay Ekle</button> -->
+        </div>
+        <div class="alert alert-primary p-4" *ngIf="detayLoader">
+            <div class="spinner-glow spinner-glow-primary m-0 mr-4 valign-middle"></div>
+            <span class=" valign-middle">Satış Detay kayıtları listeleniyor, lütfen bekleyiniz.</span>
+        </div>
+        <div class="card full-list-1" [hidden]="!satisDetayListesi || detayLoader">
+            <div class="card-body" *ngIf="satisDetayListesi && !detayLoader">
+                <div class="table-responsive">
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                        <tr class="alert-primary">
+                            <th class="text-center w-15">Ürün Stok Kodu</th>
+                            <th class="text-center w-30">Ürün Adı</th>
+                            <th class="text-center w-10">Miktar</th>
+                            <th class="text-center w-20">Satır Toplamı</th>
+                            <th class="text-center w-25"></th>
+                            <!-- <th class="text-center"><button type="button" class="btn btn-sm btn-primary w-100" (click)="satisDetayEkleButton()"><i class="fas fa-plus mr-1"></i>Detay Ekle</button></th> -->
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr *ngFor="let detay of satisDetayListesi">
+                            <td class="text-center">{{detay.e_stok_kart_kodu}}</td>
+                            <td class="text-center">{{detay.e_stok_kart_adi}}</td>
+                            <td class="text-center">{{detay.e_miktar}}</td>
+                            <td class="text-right">{{detay.e_satir_toplami | currency : ' '}} ₺</td>
+                            <td class="text-center">
+                                <button class="btn btn-sm btn-outline-primary w-48" style="margin-right: 3%;" (click)="satisDetayDuzenleButton(detay)"><i class="fas fa-edit"></i></button>
+                                <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[detay.e_id]" (click)="detaySilButton(detay, 'satisIslemleri/satisDetaySil');"><i class="fas fa-times"></i></button>
+                                <button class="btn btn-sm btn-dark w-48" *ngIf="silinenKayitBtn[detay.e_id]"><div class="spinner-glow spinner-glow-light mt-0"></div></button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>        
+    </div>
     <div class="modal-footer">
         <button class="btn btn-primary mr-1 w-lg" *ngIf="!islemiKaydetBtn" onclick="document.getElementById('submitButton').click()">
             <i class="fas fa-check mr-2"></i> Kaydet
@@ -34,32 +82,6 @@
         <div class="spinner-glow spinner-glow-light mt-0 mr-2"></div> Kaydeliyor
         </button>
         <button class="btn btn-outline-dark w-lg" (click)="modal.dismiss('')"><span class="fas fa-times mr-2"></span> İptal</button>
-    </div>
-    <div class="container mt-1">
-      <div class="table-responsive">
-        <table class="table table-bordered table-hover">
-          <thead>
-            <tr class="alert-primary">
-              <th class="text-center">Ürün</th>
-              <th class="text-center">Miktar</th>
-              <th class="text-center">Satır Toplamı</th>
-              <th class="text-center"><button type="button" class="btn btn-sm btn-primary w-100" (click)="satisDetayEkleButton()"><i class="fas fa-plus mr-1"></i>Detay Ekle</button></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let detay of satisDetayListesi">
-              <td class="text-center">{{detay.e_stok_kart_kodu}} - {{detay.e_stok_kart_adi}}</td>
-              <td class="text-center">{{detay.e_miktar}}</td>
-              <td class="text-center">{{detay.e_satir_toplami}}</td>
-              <td class="text-center">
-                <button class="btn btn-sm btn-outline-primary w-48" style="margin-right: 3%;" (click)="satisDetayDuzenleButton(detay)"><i class="fas fa-edit"></i></button>
-                <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[detay.e_id]" (click)="detaySilButton(detay, 'satisIslemleri/satisDetaySil');"><i class="fas fa-times"></i></button>
-                <button class="btn btn-sm btn-dark w-48" *ngIf="silinenKayitBtn[detay.e_id]"><div class="spinner-glow spinner-glow-light mt-0"></div></button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
     </div>
 </ng-template>
 
@@ -143,10 +165,11 @@
         <table class="table table-bordered table-hover">
           <thead>
             <tr class="alert-primary">
-              <th class="text-center w-15">Tarih</th>
+              <th class="text-center w-10">Tarih</th>
               <th class="text-center w-15">Ödeme Tipi</th>
-              <th class="text-center w-10">Toplam</th>
+              <th class="text-center w-15">Satışı Yapan</th>
               <th class="text-center w-10">Durum</th>
+              <th class="text-center w-10">Toplam</th>
               <th class="text-center w-20">
                 <button class="btn btn-primary btn-sm btn-block" (click)="satisEkleButton()"><i class="fas fa-plus mr-1"></i> Yeni Satış Ekle</button>
               </th>
@@ -154,17 +177,28 @@
           </thead>
           <tbody>
             <tr *ngFor="let satis of satisListesi">
-              <td class="text-center">{{satis.e_tarih | date: 'dd.MM.yyyy - HH:mm'}}</td>
-              <td class="text-left">{{satis.e_odeme_tipi}}</td>
-              <td class="text-right" *ngIf="satis.e_sepet_toplami != null">{{satis.e_sepet_toplami | currency : ' '}} ₺</td>
-              <td class="text-right" *ngIf="satis.e_sepet_toplami == null">Tutar Yok</td>
-              <td class="text-center"><span class="badge badge-success p-1 w-100 " *ngIf="satis.e_durum == 'Aktif'">Aktif</span>
-                <span class="badge badge-secondary p-1 w-100 " *ngIf="satis.e_durum != 'Aktif'">Pasif</span></td>
-              <td class="text-center">
-                <button class="btn btn-sm btn-outline-primary w-48" style="margin-right: 3%;" (click)="satisDuzenleButton(satis)"><i class="fas fa-edit"></i></button>
-                <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[satis.e_id]" (click)="silButton(satis, 'satisIslemleri/satisSil');"><i class="fas fa-times"></i></button>
-                <button class="btn btn-sm btn-dark w-48" *ngIf="silinenKayitBtn[satis.e_id]"><div class="spinner-glow spinner-glow-light mt-0"></div></button>
-              </td>
+                <td class="text-center">{{satis.e_tarih | date: 'dd.MM.yyyy - HH:mm'}}</td>
+                <td class="text-left">{{satis.e_odeme_tipi}}</td>
+                <td class="text-left">{{satis.e_satisi_acan_kullanici_adi}}</td>
+                <td class="text-center">
+                    <span class="badge badge-success p-1 w-100 " *ngIf="satis.e_durum == 'Aktif'">Aktif</span>
+                    <span class="badge badge-secondary p-1 w-100 " *ngIf="satis.e_durum != 'Aktif'">Pasif</span>
+                </td>
+                <td class="text-right" *ngIf="satis.e_sepet_toplami != null">{{satis.e_sepet_toplami | currency : ' '}} ₺</td>
+                <td class="text-right" *ngIf="satis.e_sepet_toplami == null">Tutar Yok</td>
+                <td class="text-center">
+                    <button class="btn btn-sm btn-outline-primary w-48" style="margin-right: 3%;" (click)="satisDuzenleButton(satis)"><i class="fas fa-edit"></i></button>
+                    <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[satis.e_id]" (click)="silButton(satis, 'satisIslemleri/satisSil');"><i class="fas fa-times"></i></button>
+                    <button class="btn btn-sm btn-dark w-48" *ngIf="silinenKayitBtn[satis.e_id]"><div class="spinner-glow spinner-glow-light mt-0"></div></button>
+                </td>
+            </tr>
+            <tr class="alert-primary">
+                <td></td>
+                <td></td>
+                <td></td>
+                <td class="text-right">ALT TOPLAM :</td>
+                <td class="text-right"><strong>{{satisListesi[0].ALT_TOPLAM | currency : ' '}} ₺</strong></td>
+                <td></td>
             </tr>
           </tbody>
         </table>
