--- a/bayi/src/app/pages/islemler/siparisIslemleri/siparisIslemleri.html
+++ b/bayi/src/app/pages/islemler/siparisIslemleri/siparisIslemleri.html
@@ -28,7 +28,7 @@
     <div class="container mt-1">
       <div class="card-header bg-transparent d-flex jc-space-between border-1-bottom mx-3" style="border-radius: 10px;">
         <h5 class="m-0 mt-2 ng-tns-c77-6">Sipariş Detayları</h5><button class="btn btn-block btn-primary w-20 ng-tns-c77-6" (click)="siparisDetayEkleButton()"><i class="fas fa-plus mr-2 ng-tns-c77-6"></i> Sipariş Detayı Ekle</button>
-    </div>
+      </div>
       <div class="alert alert-primary p-4 m-3" *ngIf="!siparisDetayListesi && !detayLoader">
         <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
         <span class=" valign-middle">Listelemek istediğiniz detay kaydı bulunamadı.</span>
@@ -93,7 +93,7 @@
           <div class="col-md-6 form-group">
             <label>Ürün *</label>
             <div class="input-group">
-              <input type="text" class="form-control" formControlName="e_stok_kart_id" readonly><button type="button" class="btn btn-sm btn-primary" (click)="urunListesiAc()"><span class="fas fa-plus mr-2"></span> Ürün Seç</button>
+              <input type="text" class="form-control" formControlName="e_stok_kart_adi" readonly><button type="button" class="btn btn-sm btn-primary" (click)="urunListesiAc()"><span class="fas fa-plus mr-2"></span> Ürün Seç</button>
             </div>
           </div>
           <div class="col-md-6 form-group">
@@ -118,54 +118,72 @@
 
 <ng-template #modalUrun let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Sipariş {{modalHeader.title}} Formu</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('');">
+    <h4 class="modal-title" id="modal-basic-title">Ürün {{modalHeader.title}} Formu</h4>
+    <button id="modalUrunKpt" type="button" class="close" aria-label="Close" (click)="modal.dismiss('');">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <div class="container">
-      <form validControl [formGroup]="siparisDetayEklemeFormu" (submit)="islemiKaydetDetayEkle()">
-        <div class="row m-0">
-          <div class="table-responsive">
-            <table class="table table-bordered table-hover">
-              <thead>
-                <tr class="alert-primary">
-                  <th class="text-center">Ürün Resmi</th>
-                  <th class="text-center">Ürün Kodu</th>
-                  <th class="text-center">Ürün Adı</th>
-                  <th class="text-center">Fiyat</th>
-                  <th class="text-center"></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let urun of urunListesi">
-                  <td class="text-left">-</td>
-                  <td class="text-left">{{urun.e_stok_kart_kodu}}</td>
-                  <td class="text-left">{{urun.e_stok_kart_adi}}</td>
-                  <td class="text-right" *ngIf="siparisListesi[0].e_fiyat_politikasi == '1'">{{urun.e_fiyat_1 | currency: ' '}} ₺</td>
-                  <td class="text-right" *ngIf="siparisListesi[0].e_fiyat_politikasi == '2'">{{urun.e_fiyat_2 | currency: ' '}} ₺</td>
-                  <td class="text-right" *ngIf="siparisListesi[0].e_fiyat_politikasi == '3'">{{urun.e_fiyat_3 | currency: ' '}} ₺</td>
-                  <td class="text-left">
-                    <button type="button" class="btn btn-block btn-primary w-100" (click)="urunSec(urun)"><span class="fas fa-plus mr-2"></span> Seç</button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+    <div class="card shadow-primary mb-3">
+      <div class="card-body">
+        <form class="row m-0" (submit)="urunListele()">
+          <div class="form-group col-md-8">
+            <label>Arama:</label>
+            <input type="text" class="form-control" [(ngModel)]="urunFilterData.ARAMA" [ngModelOptions]="{standalone: true}">
           </div>
-        </div>
-        <button id="submitButton2" class="hidden">Kaydet</button>
-      </form>
+          <div class="form-group col-md-2">
+            <label>Durum:</label>
+            <select class="form-control" [(ngModel)]="urunFilterData.e_durum" [ngModelOptions]="{standalone: true}" (change)="urunListele()">
+              <option value="">-- Tümü --</option>
+              <option value="Aktif">Aktif</option>
+              <option value="Pasif">Pasif</option>
+            </select>
+          </div>
+          <div class="form-group col-md-2">
+            <label>&nbsp;</label>
+            <button class="btn btn-dark btn-block" (click)="urunListele()"><i class="fas fa-sync mr-2"></i> Filtrele</button>
+          </div>
+        </form>
+      </div>
     </div>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-primary mr-1 w-lg" *ngIf="!islemiKaydetBtn" onclick="document.getElementById('submitButton3').click()">
-        <i class="fas fa-check mr-2"></i> Kaydet
-      </button>
-      <button class="btn btn-primary mr-1 w-lg" *ngIf="islemiKaydetBtn">
-        <div class="spinner-glow spinner-glow-light mt-0 mr-2"></div> Kaydeliyor
-      </button>
-      <button class="btn btn-outline-dark w-lg" (click)="modal.dismiss('')"><span class="fas fa-times mr-2"></span> İptal</button>
+    <div class="alert alert-primary p-4" *ngIf="!urunListesi && !urunLoader">
+      <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
+      <span class=" valign-middle">Listelemek istediğiniz kayıt bulunamadı.</span>
+    </div>
+    <div class="alert alert-primary p-4" *ngIf="urunLoader">
+      <div class="spinner-glow spinner-glow-primary m-0 mr-4 valign-middle"></div>
+      <span class=" valign-middle">Ürün kayıtları listeleniyor, lütfen bekleyiniz.</span>
+    </div>
+    <div class="card full-list-1" [hidden]="!urunListesi || urunLoader" style="height: 670px;">
+      <div class="card-body" *ngIf="urunListesi && !urunLoader">
+        <div class="table-responsive">
+          <table class="table table-bordered table-hover" style="overflow-y: auto;">
+            <thead>
+              <tr class="alert-primary">
+                <th class="text-center">Ürün Resmi</th>
+                <th class="text-center">Ürün Kodu</th>
+                <th class="text-center">Ürün Adı</th>
+                <th class="text-center">Fiyat</th>
+                <th class="text-center"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let urun of urunListesi">
+                <td class="text-left">-</td>
+                <td class="text-left">{{urun.e_stok_kart_kodu}}</td>
+                <td class="text-left">{{urun.e_stok_kart_adi}}</td>
+                <td class="text-right" *ngIf="siparisListesi[0].e_fiyat_politikasi == '1'">{{urun.e_fiyat_1 | currency: ' '}} ₺</td>
+                <td class="text-right" *ngIf="siparisListesi[0].e_fiyat_politikasi == '2'">{{urun.e_fiyat_2 | currency: ' '}} ₺</td>
+                <td class="text-right" *ngIf="siparisListesi[0].e_fiyat_politikasi == '3'">{{urun.e_fiyat_3 | currency: ' '}} ₺</td>
+                <td class="text-left">
+                  <button type="button" class="btn btn-block btn-primary w-100" (click)="urunSec(urun)"><span class="fas fa-plus mr-2"></span> Seç</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
   </div>
 </ng-template>
   
@@ -198,7 +216,7 @@
   <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
   <span class=" valign-middle">Listelemek istediğiniz kayıt bulunamadı.</span>
   <button class="btn btn-primary fa-pull-right w-25" (click)="siparisEkleButton()"><span class="fas fa-plus mr-2"></span> Yeni Sipariş Ekle</button>
-</div> 
+</div>
   
 <div class="alert alert-primary p-4" *ngIf="mainLoader">
     <div class="spinner-glow spinner-glow-primary m-0 mr-4 valign-middle"></div>
@@ -214,7 +232,7 @@
               <th class="text-center w-15">Tarih</th>
               <th class="text-center w-15">Açıklama</th>
               <th class="text-center w-10">Ürün Kalem Adedi</th>
-              <th class="text-center w-5">Siparişi Veren</th>
+              <th class="text-center w-10">Siparişi Veren</th>
               <th class="text-center w-10">Toplam</th>
               <th class="text-center w-10">Durum</th>
               <th class="text-center w-20">
